--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tw-elements": "^2.0.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
